.config/relics/rote/tests/snapshots/wording__drill-refused.snap
---
source: rote/tests/wording.rs
expression: "render(&rows, 0, Some(\"not it · try 2 of 3\"), true)"
---
╭─ rote ────────────────────────────────────────────────────── Sun 13 Sep ─╮
│                                                                          │
│   ▸ escrow-p  review · 30d · at cap       ✗  x2                          │
│                                                                          │
│                                                                          │
│   from memory — submit nothing to concede                                │
│   ╭──────────────────────────────────────────────────────────────────╮   │
│   │                                                                  │   │
│   ╰──────────────────────────────────────────────────────────────────╯   │
│                                                                          │
│   not it · try 2 of 3                                   ^L  look it up   │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
