.config/relics/rote/tests/snapshots/wording__drill.snap
---
source: rote/tests/wording.rs
expression: "render(&rows, 0, None, false)"
---
╭─ rote ────────────────────────────────────────────────────── Sun 13 Sep ─╮
│                                                                          │
│   ▸ escrow-p   review · 30d · at cap                                     │
│     op-master  practice · 30d · at cap                                   │
│                                                                          │
│                                                                          │
│   from memory — submit nothing to concede                                │
│   ╭──────────────────────────────────────────────────────────────────╮   │
│   │                                                                  │   │
│   ╰──────────────────────────────────────────────────────────────────╯   │
│                                                                          │
│                                                                          │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
