.config/relics/rote/tests/snapshots/wording__guide-custody.snap
---
source: rote/tests/wording.rs
expression: body
---
CUSTODY

  The secret is kept as an argon2id verifier over a random salt, in no
  recoverable form. rote can say wrong. It can never say what the right answer
  was: a verifier answers yes or no and holds nothing to read back.

  The stance is good faith throughout. rote guards against accident and
  confusion and not against you: it records what it was told and what it saw,
  and it verifies only what it can. You could make the record say anything you
  liked. You are trusted not to, and at worst to do it by mistake.

  A cold capture gives back nothing about what was typed. It is the one prompt
  that measures a memory, and everything else follows from that one line: it
  refuses a paste, it draws nothing, it offers no reveal and it moves no caret.
  A count of characters is partial recognition feedback handed back in the
  middle of a retrieval, and showing the answer before it is submitted is the
  whole of one. Neither may reach the prompt that is measuring. Submitting
  nothing is a fail: that is a failure of recall and is recorded as one, which
  is more honest than typing something to get past the prompt.

  What it measures is two spans and not one. The retrieval runs from the prompt
  to the first character and the typing from there to the submission: the outer
  loop that finds the word and the inner one that runs the keys (Logan and
  Crump 2011). A seven-word phrase is seven retrievals, so the first span reads
  the first word and the second reads everything after it. The card publishes
  both and the record keeps only the retrieval, because how long a secret takes
  to type bounds how long it is.

  An interval measured across a person is a reading only while the person was
  in front of it. Losing the window voids whichever span it crossed, and a
  minute of silence is taken for the same where a terminal reports no focus at
  all. The other span stands, so a lookup before the first character costs the
  retrieval and leaves the typing. A field erased back to empty is a retrieval
  given up on and the one after it is measured as a second, which a partial
  correction is not. The drill is recorded throughout either way: what goes is
  the reading, never the outcome.

  After a cold fail the drill goes on as follow-ups, masked and unbounded, and
  they measure nothing: the fail is already on the record. They exist for
  peace of mind — did I forget it, or did I mistype it — and because the
  corrective answer after an error is where the retention effect lives
  (Pashler et al. 2005), which is what makes the lookup worth offering at all.
  ctrl-l in a follow-up declares the drill aided and polices nothing: the chip
  says so, the key is withdrawn, and rote cannot see a vault typing into the
  window either way. A follow-up that passes is recovered, and the fail stands
  in every figure that claims to measure a memory. A first week is mostly
  fails recovered in a follow-up, and that is the shape of a first week
  rather than a run of failures.

  Every other prompt masks what is typed, one glyph a character, and ctrl-r
  shows the characters themselves until you press it again. NIST SP 800-63B-4
  asks verifiers to offer exactly that, and for the reason these prompts exist:
  a secret typed unseen into an enrollment is a verifier for something nobody
  knows, and nothing later can tell you so. That is also why every intake is a
  double entry, and why two entries that differ write nothing and end the
  command. A mask leaks a length, which the login screen on this machine leaks
  too. Word boundaries it does not, and never will: seven word lengths is most
  of a diceware phrase's search space, which is also why the word-wise keys
  work only once the characters are already showing. A jump that travels the
  width of a word discloses the width of a word.

  A reveal is never on by itself and never survives the prompt that opened it,
  and it goes back on its own when the window loses focus or thirty seconds
  pass with nothing typed. What it cannot do is decide who else is looking at
  the screen, or whether the session is being recorded. That part is yours.

  A cold capture is the one prompt that refuses a paste. A follow-up accepts
  one, and so does every intake. The line is measurement and not scripting: an
  answer pasted into a cold capture is a re-study rather than a retrieval, and
  retrieval is what strengthens a memory (Roediger and Karpicke 2006). So a
  paste there would weaken the very memory it claimed to test and write a pass
  that stands for none, after which the item most in need of drilling is the
  one the schedule asks for least.

  That refusal is a commitment device against your own hurry, and it is nothing
  more. Bracketed paste is advisory: the terminal is asked to mark a paste and
  there is no way to learn whether it agreed, so wherever it does not, a paste
  arrives as typing and is taken. Nor does refusing one prevent a lookup — it
  moves it to a vault typing into the window, which rote cannot see at all.

  Three verbs take a secret, and the difference between them is the whole point.

  enroll opens a lineage with its first engram.

  rotate takes a new secret, typed twice, supersedes the engram, and starts a
  new one at the foot. It proves nothing about the old secret: a different
  secret, a different memory, and nothing here to check the new one against.
  The card names the engram about to step down before it asks, and that is the
  whole of the guard.

  attach makes a verifier on this machine for the engram that is already
  current, and leaves its record untouched. The same secret, a machine that lost
  its copy — which is what a restored flagship looks like, since a verifier is
  never backed up. Before it asks, it names what it is about to continue, so
  attaching the wrong lineage has a moment to be noticed.

  rote cannot tell an attach from a rotate by looking at what was typed. It
  holds nothing to check a claim against, so an attach has no failure mode for
  the wrong secret: it records which claim was made and verifies neither. That
  is a better trade than the alternative, where losing a laptop costs the whole
  record of a memory you still hold.

  The lineage name matches the 1Password item title by convention and not by
  integration. Nothing is stored, nothing goes out of sync, no vault reference
  is added, and the drill does not fail in exactly the world escrow exists for.
