.config/relics/rote/tests/snapshots/wording__guide-irregularity.snap
---
source: rote/tests/wording.rs
expression: body
---
IRREGULARITY

  The schedule is a proposal and the actual cadence is yours. Drilling more
  often than proposed, less often, or not at all for a fortnight are all
  ordinary, and all three stay measurable.

  Three figures stand beside every drill, and none of them is written. The
  scheduled interval is what the ladder asked for at the rung the engram stood
  on. The lateness is how far past its due day a review came, and it is read
  over reviews only, because a practice was never due. The gap is how long it
  had been since the secret was in front of a person at all, by any route, and
  that is the honest retention interval: extra practice cannot dress a one-day
  recall up as a month-long one, and a fortnight away arrives as long-interval
  evidence rather than as a hole in the record.

  All three are read at replay, from the merged corpus, rather than off the
  line that carries the drill. A machine that writes what it could see at the
  time writes one machine's view, and two machines that wrote without having
  seen each other saw different things.

  A week away from the drill is therefore where long-interval readings come
  from, and they are banded with everything else in rote stats.
