.config/relics/rote/tests/snapshots/wording__guide-ladder.snap
---
source: rote/tests/wording.rs
expression: body
---
THE LADDER

  Expanding intervals, 1, 1, 2, 4, 7, 14, 30 days, held at a month. When the
  schedule asks, a cold pass moves up a rung; a fail returns to the foot, which
  keeps a shaky secret at daily intervals without a separate learning mode. The
  shape is from Bonneau and Schechter, USENIX Security 2014, who held 56-bit
  secrets at roughly 88% unaided recall on a schedule of this kind. The
  intervals are configurable; the shape is the default and not a rule.

  Three lines are the whole of the reconciliation. A cold pass on a day the
  engram is due climbs a rung and anchors the schedule to that day. A cold pass
  on any other day moves nothing: a drill nobody asked for cannot carry an
  engram up toward the cap. A fail on any day returns the engram to the foot,
  because forgetting is forgetting whichever day it was found out on.

  A drill on a day the engram is due is a review; a drill on any other day is a
  practice. Which it was is never declared and never stored. Replay reads it
  off the engram's standing on the day, from the ladder and the drills before,
  so a drill on a due engram is a review whoever asked for it — and a change to
  the ladder re-derives the whole history rather than leaving two schedules in
  one file.

  The cap is not a claim about memory. It is how stale the evidence is allowed
  to get: at a month you are never more than a month from finding out whether
  you still have it, and the record accumulates month-long retention data as a
  by-product of ordinary use. Nothing has to be remembered to collect it.

  rote records and proposes. It renders no verdict. It will not refuse a drill
  that is not due, it will not refuse a second one the same day, and nothing
  else in the system is made conditional on a drill being current. What the
  numbers mean is yours to decide, which is why every threshold that once
  produced a word now produces a number in rote stats.

  A rotation is a different secret and a different memory, so it starts a new
  engram at the foot and the measurement starts again with it. Nothing is
  pooled across one.
